umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_All Atom Query features together-expected.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 41, col 42"
molecule_lenient:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 148, col 0"
extended_molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 41, col 42"
extended_molecule_lenient:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 152, col 46"
