umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_H count-expected.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule_lenient
category: molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 34, col 42"
molecule_lenient:
  success: true
  summary:
    sum_formula: C60
    atom_count: 60
    bond_count: 60
    property_count: 0
extended_molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 34, col 42"
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C60
    atom_count: 60
    bond_count: 60
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
